securitycenter/query-builder/k8s/manifests/templates/src/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "gcr.io/${PROJECT_ID}/scc-query-builder-back:${DOCKER_TAG}"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
        - name: cloudsql-proxy
          image: "gcr.io/cloudsql-docker/gce-proxy:1.11"
          command: ["/cloud_sql_proxy",
                    "-instances=${PROJECT_ID}:us-central1:db-qb-instance=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
