securitycenter/query-builder/k8s/manifests/templates/src/jobs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs
spec:
  selector:
    matchLabels:
      app: jobs
  template:
    metadata:
      labels:
        app: jobs
    spec:
      containers:
        - name: scheduler
          image: "gcr.io/${PROJECT_ID}/scc-query-builder-scheduler:${DOCKER_TAG}"
          imagePullPolicy: Always
        - name: cleanup
          image: "gcr.io/${PROJECT_ID}/scc-query-builder-cleanup:${DOCKER_TAG}"
          imagePullPolicy: Always
